<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GirdImgSrch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="search">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="advanced_search_options">Advanced Search Options</string>
    <string name="save_term">Save</string>
    <string name="site_filter">Site Filter</string>
    <string name="image_type">Image Type</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_size">Image Size</string>
    <string name="site_filter_string">Enter a site to filter</string>
    <string name="title_activity_settings">SettingsActivity</string>
	<string name="load_more">Load More</string>
    <string-array name="image_size_array">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>icon</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    <string-array name="color_filter_array">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yello</item>
    </string-array>
    <string-array name="image_type_array">
        <item>face</item>
        <item>photo</item>
        <item>lineart</item>
        <item>clipart</item>
    </string-array>

</resources>